CMAKE_MINIMUM_REQUIRED( VERSION 2.8.8)

SET( LIBRARY_NAME bclexamplefunction)
SET( LIBRARY_OBJECTS ${LIBRARY_NAME}-objects)
PROJECT( lib${LIBRARY_NAME})

SET(
  LIBRARY_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/example_function.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/example_function_binary_cached.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/example_function_member.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/example_function_member_const.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/example_function_member_unary.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/example_function_member_unary_const.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/example_function_unary_cached.cpp
)
MACRO_CHECK_CMAKE_DIRECTORY_LIST( ${CMAKE_CURRENT_SOURCE_DIR} "${LIBRARY_SOURCES}")

ADD_LIBRARY( ${LIBRARY_OBJECTS} OBJECT ${LIBRARY_SOURCES})

IF( LINK_NAMESPACE_ARCHIVES)
  ADD_LIBRARY( ${LIBRARY_NAME} STATIC $<TARGET_OBJECTS:${LIBRARY_OBJECTS}>)
ENDIF()

SET( SUBDIRECTORY_LIBRARY_NAME ${LIBRARY_NAME} PARENT_SCOPE)
SET( SUBDIRECTORY_LIBRARY_OBJECTS ${LIBRARY_OBJECTS} PARENT_SCOPE)
